--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "vue": "^3.2.45",
+        "vue-star-rating": "^1.7.0"
     }
 }
